packagelon com.twittelonr.reloncos.uselonr_videlono_graph.relonlatelondTwelonelontHandlelonrs

import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.graphjelont.bipartitelon.api.BipartitelonGraph
import com.twittelonr.reloncos.felonaturelons.twelonelont.thriftscala.GraphFelonaturelonsForQuelonry
import com.twittelonr.reloncos.uselonr_videlono_graph.thriftscala._
import com.twittelonr.reloncos.uselonr_videlono_graph.util.FiltelonrUtil
import com.twittelonr.reloncos.uselonr_videlono_graph.util.FelontchRHSTwelonelontsUtil
import com.twittelonr.reloncos.uselonr_videlono_graph.util.GelontRelonlatelondTwelonelontCandidatelonsUtil
import com.twittelonr.reloncos.uselonr_videlono_graph.util.GelontAllIntelonrnalTwelonelontIdsUtil
import com.twittelonr.reloncos.uselonr_videlono_graph.util.SamplelonLHSUselonrsUtil
import com.twittelonr.reloncos.util.Stats._
import com.twittelonr.selonrvo.relonquelonst._
import com.twittelonr.util.Duration
import com.twittelonr.util.Futurelon
import scala.concurrelonnt.duration.HOURS

/**
 * Implelonmelonntation of thelon Thrift-delonfinelond selonrvicelon intelonrfacelon for twelonelontBaselondRelonlatelondTwelonelonts.
 *
 */
class TwelonelontBaselondRelonlatelondTwelonelontsHandlelonr(bipartitelonGraph: BipartitelonGraph, statsReloncelonivelonr: StatsReloncelonivelonr)
    elonxtelonnds RelonquelonstHandlelonr[TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst, RelonlatelondTwelonelontRelonsponselon] {
  privatelon val stats = statsReloncelonivelonr.scopelon(this.gelontClass.gelontSimplelonNamelon)

  ovelonrridelon delonf apply(relonquelonst: TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst): Futurelon[RelonlatelondTwelonelontRelonsponselon] = {
    trackFuturelonBlockStats(stats) {
      val intelonrnalQuelonryTwelonelontIds =
        GelontAllIntelonrnalTwelonelontIdsUtil.gelontAllIntelonrnalTwelonelontIds(relonquelonst.twelonelontId, bipartitelonGraph)

      val relonsponselon = intelonrnalQuelonryTwelonelontIds match {
        caselon helonad +: Nil => gelontRelonlatelondTwelonelonts(relonquelonst, helonad)
        caselon _ => RelonlatelondTwelonelontRelonsponselon()
      }
      Futurelon.valuelon(relonsponselon)
    }
  }

  privatelon delonf gelontRelonlatelondTwelonelonts(
    relonquelonst: TwelonelontBaselondRelonlatelondTwelonelontRelonquelonst,
    maskelondTwelonelontId: Long
  ): RelonlatelondTwelonelontRelonsponselon = {

    val maxNumSamplelonsPelonrNelonighbor = relonquelonst.maxNumSamplelonsPelonrNelonighbor.gelontOrelonlselon(100)
    val maxRelonsults = relonquelonst.maxRelonsults.gelontOrelonlselon(200)
    val minScorelon = relonquelonst.minScorelon.gelontOrelonlselon(0.5)
    val maxTwelonelontAgelon = relonquelonst.maxTwelonelontAgelonInHours.gelontOrelonlselon(48)
    val minRelonsultDelongrelonelon = relonquelonst.minRelonsultDelongrelonelon.gelontOrelonlselon(50)
    val minQuelonryDelongrelonelon = relonquelonst.minQuelonryDelongrelonelon.gelontOrelonlselon(10)
    val minCooccurrelonncelon = relonquelonst.minCooccurrelonncelon.gelontOrelonlselon(3)
    val elonxcludelonTwelonelontIds = relonquelonst.elonxcludelonTwelonelontIds.gelontOrelonlselon(Selonq.elonmpty).toSelont

    val quelonryTwelonelontDelongrelonelon = bipartitelonGraph.gelontRightNodelonDelongrelonelon(maskelondTwelonelontId)
    stats.stat("quelonryTwelonelontDelongrelonelon").add(quelonryTwelonelontDelongrelonelon)

    if (quelonryTwelonelontDelongrelonelon < minQuelonryDelongrelonelon) {
      stats.countelonr("quelonryTwelonelontDelongrelonelonLelonssThanMinQuelonryDelongrelonelon").incr()
      RelonlatelondTwelonelontRelonsponselon()
    } elonlselon {

      val samplelondLHSuselonrIds =
        SamplelonLHSUselonrsUtil.samplelonLHSUselonrs(maskelondTwelonelontId, maxNumSamplelonsPelonrNelonighbor, bipartitelonGraph)

      val rHStwelonelontIds = FelontchRHSTwelonelontsUtil.felontchRHSTwelonelonts(
        samplelondLHSuselonrIds,
        bipartitelonGraph,
      )

      val scorelonPrelonFactor =
        quelonryTwelonelontDelongrelonelon / math.log(quelonryTwelonelontDelongrelonelon) / samplelondLHSuselonrIds.distinct.sizelon
      val relonlatelondTwelonelontCandidatelons = GelontRelonlatelondTwelonelontCandidatelonsUtil.gelontRelonlatelondTwelonelontCandidatelons(
        rHStwelonelontIds,
        minCooccurrelonncelon,
        minRelonsultDelongrelonelon,
        scorelonPrelonFactor,
        bipartitelonGraph)

      val relonlatelondTwelonelonts = relonlatelondTwelonelontCandidatelons
        .filtelonr(relonlatelondTwelonelont =>
          FiltelonrUtil.twelonelontAgelonFiltelonr(
            relonlatelondTwelonelont.twelonelontId,
            Duration(maxTwelonelontAgelon, HOURS)) && (relonlatelondTwelonelont.scorelon > minScorelon) && (!elonxcludelonTwelonelontIds
            .contains(relonlatelondTwelonelont.twelonelontId))).takelon(maxRelonsults)

      stats.stat("relonsponselon_sizelon").add(relonlatelondTwelonelonts.sizelon)
      RelonlatelondTwelonelontRelonsponselon(
        twelonelonts = relonlatelondTwelonelonts,
        quelonryTwelonelontGraphFelonaturelons = Somelon(GraphFelonaturelonsForQuelonry(delongrelonelon = Somelon(quelonryTwelonelontDelongrelonelon))))
    }
  }
}
